# HAMeRS

./: .gitignore  .travis.yml  CMakeLists.txt  README.md  bitbucket-pipelines.yml  contributors.txt  linker.py  setupPyHAMeRS.py
src/algs/integrator/: CMakeLists.txt  ExtendedTagAndInitStrategy.cpp  ExtendedTagAndInitialize.cpp  ExtendedTagAndInitializeConnectorWidthRequestor.cpp  GriddingAlgorithm.cpp  GriddingAlgorithm_backup_backup.cpp  RungeKuttaLevelIntegrator.cpp  TimeRefinementIntegrator.cpp
src/algs/patch_strategy/: CMakeLists.txt  RungeKuttaPatchStrategy.cpp
src/apps/Euler/: CMakeLists.txt  Euler.cpp  EulerBoundaryConditions.cpp  EulerErrorStatistics.cpp  EulerErrorStatisticsDefault.cpp  EulerInitialConditions.cpp  EulerInitialConditionsDefault.cpp  EulerSpecialBoundaryConditions.cpp  EulerSpecialBoundaryConditionsDefault.cpp
src/apps/Navier-Stokes/: CMakeLists.txt  NavierStokes.cpp  NavierStokesBoundaryConditions.cpp  NavierStokesErrorStatistics.cpp  NavierStokesInitialConditions.cpp  NavierStokesInitialConditionsDefault.cpp  NavierStokesSpecialBoundaryConditions.cpp  NavierStokesSpecialBoundaryConditionsDefault.cpp  NavierStokesStatisticsErrorDefault.cpp
src/exec/: CMakeLists.txt  main.cpp  main_postprocessing.hpp  main_simulation.hpp  test.cpp
src/extn/patch_hierarchies/: CMakeLists.txt  ExtendedFlattenedHierarchy.cpp  ExtendedUncoveredBoxIterator.cpp
src/extn/transfer/: CMakeLists.txt  ExtendedRefineAlgorithm.cpp  ExtendedRefineSchedule.cpp
src/extn/variable_fill_patterns/: CMakeLists.txt  CellCornersVariableFillPattern.cpp  LayerCellNoCornersVariableFillPattern.cpp  LayerCellVariableFillPattern.cpp
src/extn/visit_data_writer/: CMakeLists.txt  ExtendedVisItDataWriter.cpp
src/flow/convective_flux_reconstructors/: CMakeLists.txt  ConvectiveFluxReconstructorFirstOrderHLLC.cpp  ConvectiveFluxReconstructorFirstOrderLLF.cpp  ConvectiveFluxReconstructorManager.cpp  ConvectiveFluxReconstructorWCNS5-JS-HLLC-HLL.cpp  ConvectiveFluxReconstructorWCNS5-Z-HLLC-HLL.cpp  ConvectiveFluxReconstructorWCNS56-HLLC-HLL.cpp  ConvectiveFluxReconstructorWCNS6-CU-M2-HLLC-HLL.cpp  ConvectiveFluxReconstructorWCNS6-HW-HLLC-HLL.cpp  ConvectiveFluxReconstructorWCNS6-HW-LD-HLLC-HLL.cpp  ConvectiveFluxReconstructorWCNS6-Test.cpp
src/flow/diffusive_flux_reconstructors/: CMakeLists.txt  DiffusiveFluxReconstructorManager.cpp
src/flow/flow_models/: CMakeLists.txt  FlowModel.cpp  FlowModelDiffusiveFluxUtilities.cpp  FlowModelFiveEqnAllaire.cpp  FlowModelFourEqnConservative.cpp  FlowModelImmersedBoundaryMethod.cpp  FlowModelManager.cpp  FlowModelMonitoringStatisticsUtilities.cpp  FlowModelSingleSpecies.cpp  FlowModelSourceUtilities.cpp  FlowModelSpecialSourceTerms.cpp  FlowModelSpecialSourceTermsDefault.cpp  FlowModelSponge.cpp  FlowModelSpongeDefault.cpp  FlowModelSubgridScaleModel.cpp
src/flow/hyperviscosity_operators/: CMakeLists.txt  HyperviscosityOperator.cpp
src/flow/nonconservative_diffusive_flux_divergence_operators/: CMakeLists.txt  NonconservativeDiffusiveFluxDivergenceOperator.cpp  NonconservativeDiffusiveFluxDivergenceOperatorEighthOrder.cpp  NonconservativeDiffusiveFluxDivergenceOperatorManager.cpp  NonconservativeDiffusiveFluxDivergenceOperatorSecondOrder.cpp  NonconservativeDiffusiveFluxDivergenceOperatorSixthOrder.cpp  NonconservativeDiffusiveFluxDivergenceOperatorTenthOrder.cpp  NonconservativeDiffusiveFluxDivergenceOperatorTwelfthOrder.cpp
src/flow/refinement_taggers/: CMakeLists.txt  GradientTagger.cpp  ImmersedBoundaryTagger.cpp  MultiresolutionTagger.cpp  ValueTagger.cpp
src/flow_model/: CMakeLists.txt  FlowModelManager.cpp
src/flow_model/Riemann_solver/: CMakeLists.txt  RiemannSolverFiveEqnAllaireHLLC.cpp  RiemannSolverFiveEqnAllaireHLLC_HLL.cpp  RiemannSolverFourEqnConservativeHLLC.cpp  RiemannSolverFourEqnConservativeHLLC_HLL.cpp  RiemannSolverFourEqnShyueHLLC.cpp  RiemannSolverFourEqnShyueHLLC_HLL.cpp  RiemannSolverHLLC.cpp  RiemannSolverHLLC_HLL.cpp  RiemannSolverSingleSpeciesHLLC.cpp  RiemannSolverSingleSpeciesHLLC_HLL.cpp
src/flow_model/convective_flux_reconstructor/: CMakeLists.txt  ConvectiveFluxReconstructorFirstOrderHLLC.cpp  ConvectiveFluxReconstructorLLF.cpp  ConvectiveFluxReconstructorTest.cpp  ConvectiveFluxReconstructorWCNS-CU6-M2-HLLC-HLL.cpp  ConvectiveFluxReconstructorWCNS-HW56-HLLC-HLL.cpp  ConvectiveFluxReconstructorWCNS-HW6-HLLC-HLL.cpp  ConvectiveFluxReconstructorWCNS-HW6-LD-HLLC-HLL.cpp  ConvectiveFluxReconstructorWCNS-JS5-HLLC-HLL.cpp  ConvectiveFluxReconstructorWCNS-Test.cpp  ConvectiveFluxReconstructorWENO-CU6-M2-LLF.cpp  ConvectiveFluxReconstructorWENO-JS5-LLF.cpp
src/flow_model/equation_of_state/: CMakeLists.txt  EquationOfStateIdealGas.cpp
src/flow_model/feature_driven_tagger/: CMakeLists.txt  FeatureDrivenTagger.cpp
src/flow_model/flow_model/: CMakeLists.txt  FlowModelFiveEqnAllaire.cpp  FlowModelFourEqnConservative.cpp  FlowModelSingleSpecies.cpp
src/flow_model/initial_conditions/: CMakeLists.txt  InitialConditions.cpp
src/flow_model/refinement_taggers/: CMakeLists.txt
src/integrator/: CMakeLists.txt  ExtendedTagAndInitStrategy.cpp  ExtendedTagAndInitialize.cpp  ExtendedTagAndInitializeConnectorWidthRequestor.cpp  GriddingAlgorithm.cpp  RungeKuttaLevelIntegrator.cpp
src/integrator/fortran/: algs_nodeouternodeops2d.m4  algs_nodeouternodeops3d.m4  algs_upfluxsum1d.f  algs_upfluxsum1d.m4  algs_upfluxsum2d.f  algs_upfluxsum2d.m4  algs_upfluxsum3d.f  algs_upfluxsum3d.m4  mesh_coarsentags1d.f  mesh_coarsentags1d.m4  mesh_coarsentags2d.f  mesh_coarsentags3d.f
src/util/: CMakeLists.txt
src/util/MPI_helpers/: CMakeLists.txt  MPIHelper.cpp  MPIHelperAverage.cpp  MPIHelperCentroid.cpp  MPIHelperCorrelation.cpp  MPIHelperGrid.cpp  MPIHelperMaxMin.cpp  MPIHelperNumberOfCells.cpp
src/util/basic_boundary_conditions/: BasicCartesianBoundaryUtilities1.cpp  BasicCartesianBoundaryUtilities2.cpp  BasicCartesianBoundaryUtilities3.cpp  BoundaryUtilityStrategy.cpp  CMakeLists.txt  CartesianBoundaryUtilities2.cpp  CartesianBoundaryUtilities3.cpp
src/util/derivatives/: CMakeLists.txt  Derivative.cpp  DerivativeFirstOrder.cpp  (+1 more)
(+623 files in other folders)
