# Define a variable nonconservative_diffusive_flux_divergence_operators_source_files containing
# a list of the source files for the nonconservative_diffusive_flux_divergence_operators library
set(nonconservative_diffusive_flux_divergence_operators_source_files
    NonconservativeDiffusiveFluxDivergenceOperatorManager.cpp
    ./sixth_order/NonconservativeDiffusiveFluxDivergenceOperatorSixthOrder.cpp
)

# Create a library called nonconservative_diffusive_flux_divergence_operators which includes the 
# source files defined in nonconservative_diffusive_flux_divergence_operators_source_files
add_library(nonconservative_diffusive_flux_divergence_operators
  ${nonconservative_diffusive_flux_divergence_operators_source_files})

TARGET_LINK_LIBRARIES(nonconservative_diffusive_flux_divergence_operators
  flow_models algs_fortran
  SAMRAI_appu SAMRAI_geom SAMRAI_solv SAMRAI_algs SAMRAI_mesh
  SAMRAI_math SAMRAI_pdat SAMRAI_xfer SAMRAI_hier SAMRAI_tbox
  hdf5 gfortran)
